shaku_derive/tests/ui/provider_attributes.stderr
error: Providers cannot have attributes
  --> tests/ui/provider_attributes.rs:15:22
   |
15 |         providers = [#[lazy] ProviderImpl]
   |                      ^^^^^^^
